fix: Full-screen style issues on mobile - Yidadaa/ChatGPT-Next-Web/#185 - Yidadaa/ChatGPT-Next-Web/#285

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -50,12 +50,13 @@
   --sidebar-width: 300px;
   --window-content-width: calc(100% - var(--sidebar-width));
   --message-max-width: 80%;
+  --full-height: 100%;
 }
 
 @media only screen and (max-width: 600px) {
   :root {
     --window-width: 100vw;
-    --window-height: 100vh;
+    --window-height: var(--full-height);
     --sidebar-width: 100vw;
     --window-content-width: var(--window-width);
     --message-max-width: 100%;
@@ -72,12 +73,16 @@
   }
 }
 
+html {
+  height: var(--full-height);
+}
+
 body {
   background-color: var(--gray);
   color: var(--black);
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: var(--full-height);
   width: 100vw;
   display: f***REMOVED***;
   justify-content: center;
@@ -112,6 +117,11 @@ select {
   cursor: pointer;
   background-color: var(--white);
   color: var(--black);
+  text-align: center;
+}
+
+input {
+  text-align: center;
 }
 
 input[type="checkbox"] {
